language/move-lang/tests/move_check/translated_ir_tests/move/borrow_tests/copy_loc_borrowed_field_invalid.exp
error[E07002]: mutable ownership violated
  ┌─ tests/move_check/translated_ir_tests/move/borrow_tests/copy_loc_borrowed_field_invalid.move:7:9
  │
6 │         let r1 = &mut x.f;
  │                  -------- It is still being mutably borrowed by this reference
7 │         copy x;
  │         ^^^^^^ Invalid copy of local 'x'

