language/move-lang/tests/move_check/translated_ir_tests/move/borrow_tests/copy_loc_borrowed_field_invalid.move
module 0x8675309::Tester {
    struct T has copy, drop { f: u64 }

    fun t() {
        let x = T { f: 0 };
        let r1 = &mut x.f;
        copy x;
        r1;
    }
}

// check: COPYLOC_EXISTS_BORROW_ERROR
